labs/4.7/client-allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-allowed
  namespace: training
  labels:
    app: client-allowed
spec:
  containers:
    - name: client
      image: busybox:1.36
      command: ["sleep", "3600"]
