labs/4.7/client-blocked.yaml
apiVersion: v1
kind: Pod
metadata:
  name: client-blocked
  namespace: training
  labels:
    app: other
spec:
  containers:
    - name: client
      image: busybox:1.36
      command: ["sleep", "3600"]
